src/tests/snapshots/cendol__tests__pp_lexer__hash_starts_pp_line.snap
---
source: src/tests/pp_lexer.rs
expression: tokens
---
- kind: Hash
  text: "#"
  flags:
    - STARTS_PP_LINE
- kind: Eod
  text: ""
