src/tests/snapshots/cendol__tests__pp_lexer__hashhash_no_starts_pp_line.snap
---
source: src/tests/pp_lexer.rs
expression: snapshot_pp_lexer(source)
---
- kind: HashHash
  text: "##"
  flags: []
