src/tests/snapshots/cendol__tests__pp_lexer__indented_hash_starts_pp_line.snap
---
source: src/tests/pp_lexer.rs
expression: snapshot_pp_lexer(source)
---
- kind: Hash
  text: "#"
  flags:
    - LEADING_SPACE
    - STARTS_PP_LINE
- kind: Eod
  text: ""
  flags: []
