src/tests/snapshots/cendol__tests__pp_lexer__line_splicing_in_skip_whitespace.snap
---
source: src/tests/pp_lexer.rs
expression: tokens
---
- kind: Identifier
  text: identifier
  flags:
    - LEADING_SPACE
