src/tests/snapshots/cendol__tests__pp_lexer__various_bmp_characters.snap
---
source: src/tests/pp_lexer.rs
expression: results
---
- - "L\"你好世界\""
  - - kind: StringLiteral
      text: "L\"你好世界\""
- - "L\"€$¢£¥\""
  - - kind: StringLiteral
      text: "L\"€$¢£¥\""
- - "L\"hello¢world€test\""
  - - kind: StringLiteral
      text: "L\"hello¢world€test\""
- - "L\"café naïve résumé\""
  - - kind: StringLiteral
      text: "L\"café naïve résumé\""
- - "L\"αβγδε\""
  - - kind: StringLiteral
      text: "L\"αβγδε\""
- - "L\"привет мир\""
  - - kind: StringLiteral
      text: "L\"привет мир\""
